# document_tool

./: .env  .env.example  README.md  openapi.json  pyproject.toml  requirements.txt
src/: server.py
src/mock_data/: acceptance_criteria.json  eln_records.json
src/tools/: acceptance_validator.py  eln_validator.py  sop_validator.py
src/utils/: document_reader.py  llm_client.py  pdf_reader.py
